# aia-cortex-nlu

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  daemon.py  pyproject.toml
.github/workflows/: docker-image.yml
aia_cortex_nlu/: daemon.py  id3Svc.py  model.py  nliSvc.py  nluSvc.py
aia_cortex_nlu/nli/: enum.py
aia_cortex_nlu/nlp/: nlp_processor.py  p_decision_tree.py
aia_cortex_nlu/repositories/: aiaRepo.py
kafka/: Queue.py
logs/: logs_cfg.py
repositories/: aiaRepo.py
resources/: EmailRead copy.csv  EmailRead.csv  WH40K.csv  log_cfg.yaml
resources/resp/: WH40K.csv
resources/test/: SG_encenderBomba.json  graphviz_sample.gv  msg002_wh40k.json  semanticGraphError.json  sgWh40kN1.json
resources/test/message/: cmd_encender_bomba.json  wh40k_ancient.json  wh40k_predator.json  wh40k_rhino.json
tests/: semanticGraphExample.json  test_decision_tree.py  test_id3.py  test_nlg.py  test_nli.py  test_nlp.py  test_nluSvc.py  test_queueProducer.py
tests/resources/messages/: email01.json  wh40k_captain.json  wh40k_sm.json  wh40k_vyper.json
