[tool.poetry]
name = "aia-cortex-nlu"
version = "0.1.0"
description = "Natural Language Processor"
authors = ["Edgar Rodrigo Sanchez De Gracia <edgr.sanchez@mercadolibre.cl>"]
readme = "README.md"
packages = [{include = "aia_cortex_nlu"}, {include = "kafka"}, {include = "logs"}, {include = "repositories"}]

[tool.poetry.dependencies]
python = ">=3.11.2,<3.12"
openai = "^0.28.1"
confluent-kafka = "2.3.0"
pymongo = "4.2.0"
pandas = "2.1.2"
simplenlg = "0.2.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
numpy = "^1.26.2"
coverage = "^7.3.2"
spacy = "^3.7.2"
es-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0.tar.gz"}
nltk = "^3.8.1"

[tool.pytest.ini_options]
pythonpath = "aia_cortex_nlu"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
daemon = 'aia_cortex_nlu.daemon:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
